integration/messaging-functions/openshift/apache-artemis.yml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations: {}
    labels:
      app: apache-artemis
    name: apache-artemis
  spec:
    ports:
    - name: 5672-tcp
      port: 5672
      protocol: TCP
      targetPort: 5672
    selector:
      app: apache-artemis
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations: {}
    labels:
      app: apache-artemis
    name: apache-artemis-console
  spec:
    ports:
    - name: 8661-http
      port: 8161
      protocol: TCP
      targetPort: 8161
    selector:
      app: apache-artemis
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations: {}
    labels:
      app: apache-artemis
    name: apache-artemis-console
  spec:
    host: apache-artemis-console-myproject.192.168.64.97.nip.io
    port:
      targetPort: 8661-http
    to:
      kind: Service
      name: apache-artemis-console
      weight: 100
    wildcardPolicy: None
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations: {}
    labels:
      app: apache-artemis
    name: apache-artemis
  spec:
    replicas: 1
    selector:
      app: apache-artemis
      deploymentconfig: apache-artemis
    template:
      metadata:
        annotations: {}
        labels:
          app: apache-artemis
          deploymentconfig: apache-artemis
      spec:
        containers:
        - image: docker.io/kameshsampath/apache-artemis
          imagePullPolicy: IfNotPresent
          name: apache-artemis
          ports:
          - containerPort: 1883
            protocol: TCP
          - containerPort: 5445
            protocol: TCP
          - containerPort: 5672
            protocol: TCP
          - containerPort: 61613
            protocol: TCP
          - containerPort: 61616
            protocol: TCP
          - containerPort: 8161
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    triggers:
    - type: ConfigChange
  status: {}
kind: List
metadata: {}
